Revision history for HTML::Mason.

An HTML version of this file, complete with links to documentation, is
available at http://www.masonhq.com/code/history.html.

** denotes an incompatible change

1.19  March 3, 2003

[ BUG FIXES ]

- Fixed a very nasty bug that could cause subcomponents or methods
from one component to show up in another components.  Task id #443 in
todo list.
- If the closing tag of a <%flags>, <%attr>, or <%args> block
contained upper case characters, the component would not be parsed
properly.  Reported by Chris Snyder.  Task id #440 in
todo list.
- Providing a Resolver object directly to the ApacheHandler
constructor caused a fatal error.  Reported by Kwindla Kramer.  Task
id #441 in todo list.


1.18  January 24, 2003

[ BUG FIXES ]

- Require Exception::Class 1.09.  Version 1.08 has a bug that causes
problems with Mason when used with any Perl earlier than 5.8.0.
- Fix a bug in the lexer code that caused Mason to not work with Perl
5.00503 at all.


1.17  January 17, 2003

[ ENHANCEMENTS ]

- Added "REQUEST:" as a component specifier for method comp calls,
similar to "SELF:" and "PARENT:".  "REQUEST:" is short-hand for
$m->request_comp.  Suggested by Manuel Capinha, among others.
- Added $m->call_self.  This was present in Mason pre-1.10, and has
been added back per Jon Swartz's request.
- Added $comp->attributes, similar to $comp->methods.  This just
returns attributes for a given component object.  It doesn't return
attributes inherited from a parent.  Suggested by Matti Makitalo.

[ BUG FIXES ]

- ** When $m->cache_self was used for a component with a filter block,
the output would be cached _before_ filtering, and filtered every time
it was retrieved from the cache.  This has been fixed, and the
documentation now specifies that the filtered output is cached.
- Fixed failure of 12-taint.t #7 on Win32 boxes.  Reported by Randy
Kobes.
- Without HTML::Entities installed, 13-errors.t #7 failed.  Reported
by Sam Kington.